--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,107 @@
 //====================================================================================================
+.header {
+	&__container {
+		display: grid;
+		grid-template-columns: 1fr auto 1fr;
+		gap: toRem(15);
+		@include adaptiveValue("min-height", 152, 70);
+		align-items: center;
+		padding-top: toRem(10);
+		padding-bottom: toRem(10);
+		@media (max-width: $mobile) {
+			gap: toRem(0);
+			grid-template-columns: auto 1fr auto auto;
+		}
+	}
+	&__menu {
 
+	}
+	&__logo {
+		@include adaptiveValue("width", 217, 80);
+		position: relative;
+		z-index: 5;
+		path{
+			fill: #fff;
+		}
+		
+	}
+	&__action {
+
+	}
+}
+.menu {
+	&__icon {
+
+	}
+	&__body {
+		@media (max-width: $mobile){
+			  position: fixed;
+			  width: 100%;
+			  height: 100%;
+			  left: 0;
+			  top: 0;
+			  overflow: auto;
+			  background-color: $BgGold;
+			  padding: toRem(100) toRem(15) toRem(30) toRem(15);
+		}
+	}
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		column-gap: toRem(47);
+		row-gap: toRem(3);
+		align-items: center;
+		@include adaptiveValue("column-gap", 47, 15, 0, $containerWidth, 767.98);
+
+		@media (max-width: $mobile) {
+			flex-direction: column;
+			row-gap: toRem(20);
+		}	
+	}
+	&__item {
+
+	}
+	&__link {
+		display: inline-block;
+		color: $BgGold;
+		font-weight: 300;
+		line-height: 152%;
+		@media (max-width: $mobile) {
+			color: #fff;
+			font-size: toRem(28);
+		}
+	}
+}
+.icon-menu {
+
+}
+.action-header {
+	display: flex;
+	justify-content: flex-end;
+	flex-wrap: wrap;
+	@include adaptiveValue("column-gap", 47, 15, 0, $containerWidth, 767.98);
+	column-gap: toRem(47);
+	row-gap: toRem(3);
+	align-items: center;
+
+	&__link {
+		display: inline-block;
+		color: $BgGold;
+		font-weight: 300;
+		line-height: 152%;
+	}
+	&__button {
+		@media (max-width: $tablet) {
+			padding: toRem(8) toRem(20);
+		}
+	}
+}
+	
+			
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
 	@media (max-width: $mobile) {
@@ -24,7 +122,7 @@
 			position: absolute;
 			width: 100%;
 			height: toRem(2);
-			background-color: #000;
+			background-color: #fff;
 		}
 		&::before {
 			top: 0;
@@ -53,4 +151,4 @@
 		}
 	}
 }
-*/
+
