The footer html and scss begun produced and left decor added

--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -14,3 +14,40 @@
 		display: block;
 	}
 }
+
+._icon-clock_fill:before {
+	content: "\e900";
+  }
+  ._icon-geo_alt:before {
+	content: "\e901";
+  }
+  ._icon-insta:before {
+	content: "\e902";
+  }
+  ._icon-LeftSlider_arrow:before {
+	content: "\e903";
+  }
+  ._icon-Paw_Vector:before {
+	content: "\e904";
+  }
+  ._icon-play_fill:before {
+	content: "\e905";
+  }
+  ._icon-quote_back:before {
+	content: "\e906";
+  }
+  ._icon-quote_front:before {
+	content: "\e907";
+  }
+  ._icon-RightSlider_arrow:before {
+	content: "\e908";
+  }
+  ._icon-tik_tok:before {
+	content: "\e909";
+  }
+  ._icon-twitter:before {
+	content: "\e90a";
+  }
+  ._icon-video_icon:before {
+	content: "\e90b";
+  }
