--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@ $fontSize: toRem(16); // де 14(px) - розмір шрифту за замов
 // Основні кольори
 $mainColor: #222220;  // Колір шрифту за замовчуванням
 $goldColor: #9D875C;
+$goldColorHover: #f0eadf;
 $BgGold: #C1AB81;
 $BgDark: #222220; 
 
