The footer finished with one issue - input color

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,6 +10,9 @@
         position: absolute;
         height: 100%;
         width: toRem(174);
+        @media (max-width: em(1640)) {
+            opacity: 0.1;
+        }
     }
     &::before {
         content: "";
@@ -25,17 +28,32 @@
         background: url('@img/left_footer_decor.svg') left bottom /100% no-repeat;
     }
     &__container {
-
+        position: relative;
+        z-index: 5;
     }
     &__body {
         @include adaptiveValue("padding-top", 92, 40);
         @include adaptiveValue("padding-bottom", 45, 30);
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        @media (max-width:$tablet){
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media (max-width:$mobile){
+              grid-template-columns: auto;
+        }
     }
     &__content {
-        border-right: toRem(1) solid $BgGold;
         @include adaptiveValue("padding-right", 40, 15);
+        @media (max-width:$tablet){
+            order: 2;
+        }
+        @media (max-width:$mobile){
+             order: 3; 
+        }
+        @media (min-width:$tablet){
+            border-right: toRem(1) solid $BgGold;
+        }
     }
     &__menu {
         &:not(:last-child) {
@@ -47,11 +65,32 @@
     }
     &__logo {
         justify-self: center;
+        align-self: center;
         @include adaptiveValue("width", 287, 80);
+        @media (max-width:$tablet){
+            order: 1;
+            grid-column: span 2;
+            &:not(:last-child) {
+                @include adaptiveValue("margin-bottom", 40, 30);
+            }
+        }
+        @media (max-width:$mobile){
+             grid-column: span 1; 
+        }
     }
     &__subscribe {
+        @media (max-width:$tablet){
+            order: 3;
+        }
+        @media (max-width:$mobile){
+             order: 2;
+             @include adaptiveValue("margin-bottom", 40, 30);
+        }
     }
     &__copy {
+        border-top: toRem(1) solid $BgGold;
+        text-align: center;
+        line-height: 120%;
         @include adaptiveValue("padding-top", 42, 15);
         @include adaptiveValue("padding-bottom", 42, 15);
     }
@@ -69,12 +108,37 @@
         &:not(:last-child) {
             margin-bottom: toRem(15);
         }
+        ._spoller-init &{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &::after {
+                display: flex;
+                justify-content: end;
+                @extend %ic;
+                width: toRem(20);
+                overflow: hidden;
+                content: "\e908";
+                transition: transform 0.3s;
+                transform: rotate(90deg);
+            }
+        }
+        &._spoller-active {
+            &::after {
+                transform: rotate(-90deg);
+            }
+        }
     }
     &__list {
         display: flex;
         flex-wrap: wrap;
         row-gap: toRem(3);
         @include adaptiveValue("column-gap", 42, 15);
+        @media (max-width:$mobile){
+             flex-direction: column;
+             flex-wrap: nowrap;
+             row-gap: toRem(10);
+        }
     }
     &__item {
 
@@ -96,6 +160,9 @@
     flex-wrap: wrap;
     row-gap: toRem(3);
     @include adaptiveValue("column-gap", 41, 15);
+    @media (max-width:$mobileSmall){
+         justify-content: space-between; 
+    }
     &__item {
         font-size: toRem(24);
         transition: color 0.3s;
@@ -107,28 +174,53 @@
     }
 }
 .subscribe {
-    border-left: toRem(1) solid $BgGold;
-    @include adaptiveValue("padding-left", 40, 15);
-    display: grid;
-    justify-items: end;
+    @include adaptiveValue("padding-left", 40, 15, 2, $containerWidth, 767.98);
+    @media (max-width:$mobile){
+        // border-left: toRem(1) solid $BgGold;
+        display: grid;
+        justify-items: end;
+    }
     // justify-content: end;
     &__body {
-        max-width: toRem(350);
+        @media (min-width:$mobile){
+            max-width: toRem(350); 
+        }
     }
 
     &__title {
         font-family: "Italiana";
-        font-size: toRem(32);
+        @include adaptiveValue("font-size", 32, 18);
         text-transform: capitalize;
+        line-height: 120%;
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 25, 10);
+        }
     }
     &__form {
+        display: flex;
+        height: toRem(40);
+        border-bottom: toRem(1) solid rgba(193, 170, 129, 0.2);
+        position: relative;
+        .form__error {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            font-size: toRem(11);
+            color: red;
+            margin-top: toRem(5);
+        }
 
     }
     &__input {
-
+        flex: 1 1 auto;
     }
     &__button {
-
+        transition: color 0.3s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $goldColorHover;
+            }
+        }
     }
 }
 //====================================================================================================
