The first part of bilding the  home section which include slider

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -213,6 +213,7 @@
     }
     &__input {
         flex: 1 1 auto;
+        background-color: transparent;
     }
     &__button {
         transition: color 0.3s;
