--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,78 @@
 //====================================================================================================
+.hero {
+    position: relative;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    &__container {
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: toRem(150);
+        padding-bottom: toRem(50);
+        position: relative;
+        z-index: 2;
+        flex-grow: 1;
+    }
+    .hero__body {
+        
+    }
+    &__content {
+        flex: 1 1 auto;
+        max-width: toRem(645);
+        position: relative;
+        z-index: 2;
+    }
+    &__title {
+        @include adaptiveValue("font-size", 100, 42);
+        font-family: "Italiana";
+        color: $BgGold;
+        text-transform: capitalize;
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 35, 15);
+        } 
+    }
+    &__button {}
+    &__slider.swiper {
+        // transform: translate(0px, -100%);
+        margin-top: -50%;
+        flex: 0 0 toRem(700);
+        width: toRem(700);
+    }
+    &__wrapper {}
+    &__slide {}
+    &__control {}
+    &__arrow {
+        &--left {}
+        &--right {}
+    }
+    &__bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+.slide-hero {
+    border: toRem(1) solid $BgGold;
+    padding: toRem(24);
+    border-radius: 50%;
+    flex: 1 1 auto;
+    &__body {
+        background: linear-gradient(135deg,rgba(20, 17, 10, 1) 0%, rgba(33, 28, 22, 1), rgba(20, 17, 10, 1) 100%);
+        border-radius: 50%;
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        overflow: hidden;
+        position: relative;
+    }
+    &__image {
+        max-width: 100%;
+    }
+}
+.swiper-slide {
 
+}
 //====================================================================================================
