--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -174,6 +174,7 @@
     }
 }
 .subscribe {
+    border-left: toRem(1) solid $BgGold;
     @include adaptiveValue("padding-left", 40, 15, 2, $containerWidth, 767.98);
     @media (max-width:$mobile){
         // border-left: toRem(1) solid $BgGold;
