--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,20 +5,21 @@
     display: flex;
     align-items: center;
     &__container {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        align-items: center;
+        gap: toRem(30);
+        grid-template-columns: 1fr 44% 1fr;
         padding-top: toRem(150);
         padding-bottom: toRem(50);
         position: relative;
         z-index: 2;
         flex-grow: 1;
     }
-    .hero__body {
-        
+    &__body {
+        // flex: 1 1 100%;
     }
     &__content {
-        flex: 1 1 auto;
-        max-width: toRem(645);
+        margin-right: -55%;
         position: relative;
         z-index: 2;
     }
@@ -33,10 +34,11 @@
     }
     &__button {}
     &__slider.swiper {
-        // transform: translate(0px, -100%);
-        margin-top: -50%;
-        flex: 0 0 toRem(700);
-        width: toRem(700);
+        padding-top: toRem(50);
+        padding-bottom: toRem(50);
+        // margin-top: -50%;
+        // flex: 0 0 toRem(700);
+        // width: toRem(700);
     }
     &__wrapper {}
     &__slide {}
@@ -45,6 +47,7 @@
         &--left {}
         &--right {}
     }
+    &__mini-slider{}
     &__bg {
         position: absolute;
         width: 100%;
@@ -56,10 +59,16 @@
     }
 }
 .slide-hero {
+    aspect-ratio: 1 / 1;
     border: toRem(1) solid $BgGold;
-    padding: toRem(24);
+    @include adaptiveValue("padding", 24, 10);
     border-radius: 50%;
     flex: 1 1 auto;
+    position: relative;
+    &--mini {
+        flex: 0 0 auto;
+        padding: toRem(3);
+    }
     &__body {
         background: linear-gradient(135deg,rgba(20, 17, 10, 1) 0%, rgba(33, 28, 22, 1), rgba(20, 17, 10, 1) 100%);
         border-radius: 50%;
@@ -69,10 +78,43 @@
         position: relative;
     }
     &__image {
-        max-width: 100%;
+        width: 100%;
+        margin-top: -10%;
+    }
+    &__top-image {
+        width: 100%;
+        height: 50%;
+        overflow: hidden;
+        aspect-ratio: 1 / 1;
+        margin-top: -110%;
+        img {
+            max-width: 100%;
+        }
     }
 }
-.swiper-slide {
+.mini-slider.swiper {
+    padding-top: toRem(30);
+    padding-bottom: toRem(30);
+    transform: translate(0, -30%);
+    &__wrapper {
 
+    }
+    &__slide {
+        width: 28.536585%;
+        cursor: pointer;
+    }
 }
+// .swiper {
+
+// }
+// .swiper-wrapper {
+
+// }
+// .slide-hero {
+//     &__body {}
+//     &__image {}
+// }
+// .swiper-slide {
+
+// }
 //====================================================================================================
