Trying to connect two sliders

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -8,7 +8,7 @@
         display: grid;
         align-items: center;
         gap: toRem(30);
-        grid-template-columns: 1fr 44% 1fr;
+        grid-template-columns: 1fr 72%;
         padding-top: toRem(150);
         padding-bottom: toRem(50);
         position: relative;
