--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -89,16 +89,19 @@
     }
 }
 .slide-hero {
-    aspect-ratio: 1 / 1;
-    border: toRem(1) solid $BgGold;
-    @include adaptiveValue("padding", 24, 10);
-    border-radius: 50%;
-    flex: 1 1 auto;
-    position: relative;
     &--mini {
         flex: 0 0 auto;
         padding: toRem(3);
         width: toRem(117);
+    }
+    &__content {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        border: toRem(1) solid $BgGold;
+        @include adaptiveValue("padding", 24, 10);
+        border-radius: 50%;
+        flex: 1 1 auto;
+        position: relative;
     }
     &__body {
         background: linear-gradient(135deg,rgba(20, 17, 10, 1) 0%, rgba(33, 28, 22, 1), rgba(20, 17, 10, 1) 100%);
