The about_us section done

--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -33,6 +33,11 @@
 		&::before {
 			opacity: 0;
 		}
+		@media (any-hover: hover){
+			&:hover{
+				border: toRem(1) solid transparent;
+			}
+		}
 
 	}
 	span {
@@ -41,9 +46,8 @@
 	@media (any-hover: hover) {
 		&:hover {
 			color: $mainColor;
-			border: toRem(1) solid $BgGold;
 			&::before {
-				opacity: 1;;
+				opacity: 1;
 			}
 		}
 	}
