--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,6 +5,11 @@
 	left: 0;
 	width: 100%;
 	z-index: 50;
+	transition: all 0.8s;
+	&._header-scroll {
+		background-color: rgba(0, 0, 0, 0.6);
+		@include adaptiveValue("min-height", 120, 70);
+	}
 	&__container {
 		display: grid;
 		grid-template-columns: 1fr auto 1fr;
@@ -13,15 +18,20 @@
 		align-items: center;
 		padding-top: toRem(10);
 		padding-bottom: toRem(10);
+		transition: min-height 0.8s;
 		@media (max-width: $mobile) {
 			gap: toRem(0);
 			grid-template-columns: auto 1fr auto auto;
+		}
+		._header-scroll & {
+			@include adaptiveValue("min-height", 100, 70);
 		}
 	}
 	&__menu {
 
 	}
 	&__logo {
+		transition: width 0.8s;
 		@include adaptiveValue("width", 217, 80);
 		position: relative;
 		z-index: 5;
@@ -32,7 +42,9 @@
 				};
 			}
 		}
-		
+		._header-scroll & {
+			@include adaptiveValue("width", 150, 80);
+		}
 		
 	}
 	&__action {
