--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,6 +66,7 @@ $responsiveType: 1;
 
 // Стилі тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 body {
+	background-color: #efe9dd;
 	// Скролл заблоковано
 	.lock & {
 		overflow: hidden;
