--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -241,7 +241,7 @@
     @include adaptiveValue("padding-top", 90, 30);
     @include adaptiveValue("padding-bottom", 170, 30);
     &__container {
-
+        display: grid;
     }
     &__block-header {
         text-align: center;
@@ -253,33 +253,101 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(toRem(350), 1fr));
         @include adaptiveValue("gap", 53, 20);
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 54, 30);
+        }
+        @media (max-width:$mobileSmall){
+            grid-template-columns: repeat(auto-fill, minmax(toRem(280), 1fr));
+        }
     }
     &__item {
 
     }
+    &__button {
+        justify-self: center;
+    }
 }
 .item-product {
-    &__link {
-
+    &__header {
+        border: toRem(1) solid $goldColor;
+        position: relative;
+        padding: toRem(40);
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transition: opacity 0.3s;
+            opacity: 0.5;
+            background: url('@img/products/background_for_carts.png') center no-repeat;
+            background-size: 100% 100%;
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transition: opacity 0.3s;
+            opacity: 0;
+            background-color: rgba(60, 38, 12, 0.55);
+        }
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 39, 20);
+        }
+        @media (any-hover: hover){
+            &:hover{
+                &::after {
+                    opacity: 1;
+                }
+                .item-product__add-to-cart {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
+        }
     }
     &__image-ibg--contain {
-        margin: toRem(40);
         aspect-ratio: 353 / 351;
-    }
+        img {
+            filter: drop-shadow(10px 10px 10px rgba(60, 38, 12, 0.35));
+        }
+    } 
     &__body {
-
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        gap: toRem(15);
+        justify-content: space-between;
     }
     &__title {
-
+        font-family: "Italiana";
+        text-transform: capitalize;
+        font-size: toRem(24);
     }
     &__link-title {
-
+        line-height: 120%;
+        &:hover{
+            text-decoration: underline;
+        }
     }
     &__price {
-
+        font-size: toRem(24);
     }
     &__rating {
-
+        grid-column: span 2;
+    }
+    &__add-to-cart {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s;
+        z-index: 2;
     }
 }
 .rating {
