The section services complited

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -8,6 +8,9 @@
     &--center {
         justify-items: center;
     }
+    &--white {
+        color: #fff;
+    }
     // .block-header__label
     &__label {
         line-height: 156,25%;
